--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 </div>
             </div>
-            <div class="col-md-4" id="searchBox">
+            <div class="col-lg-4" id="searchBox">
                 <div class="row">
                     <div class="col-lg-12">
                         <h4>Add an Animal</h4>
