--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Giphy Navigator</title>
+    <title>Animal Giphy Navigator</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Added link to the jQuery Library -->
@@ -17,7 +17,7 @@
 <body>
 
     <div class="jumbotron" align="center">
-        <h1>Giphy Navigator</h1>
+        <h1>Animal Giphy Navigator</h1>
         <div class="row" id="buttonsRow">
             <div class="col-lg-12" id="buttonsCol">
                  
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h4>Add an Animal</h4>
-                        <label for="animal-input">Name:</label>
+                        <label for="animal-input">Animal Type:</label>
                         <input class="form-control" id="animal-input" type="text" style="margin-bottom:12px">
                     </div>
                     <div class="col-lg-3" style="margin-bottom:12px">
